fixed the spacing for grid items

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -452,8 +452,8 @@ a {
     grid-auto-flow: row;
     /* grid-template-rows: repeat(auto-fit, auto); */
     grid-gap: 1em;
-    justify-items: auto;
-    align-items: auto;
+    justify-content: space-evenly;
+
 
 
 
@@ -483,11 +483,8 @@ a {
     grid-template-columns: repeat(2, auto);
     grid-auto-flow: column;
     grid-template-rows: repeat(auto-fit, auto);
-    grid-gap: 2em;
-    justify-items: auto;
-    align-items: auto;
-    padding: 0;
-    margin: 0;
+    grid-gap: 1em;
+    justify-content: space-evenly;
 }
 
 .contact_Services .contact_Services_Item {
